caseConfig/force-app/main/default/objects/Case_Config__c/Case_Config__c.object-meta.xml
<CustomObject>
    <description>This object holds a link between Case and Config object.</description>
    <label>Case Config</label>
    <nameField>
        <displayFormat>CCN-{00000}</displayFormat>
        <label>Case Config Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>