caseConfig/force-app/main/default/objects/Case_Config__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the case for a particular config data.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Configs</relationshipLabel>
    <relationshipName>Case_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>